fixed inputfields for login

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="shortcut icon" href="assets/img/Join_background.png" type="image/x-icon">
 
     <link rel="stylesheet" href="login_style.css">
+    <link rel="stylesheet" href="reset_forget_success.css">
     <link rel="stylesheet" href="fonts.css">
 
     <script src="mini_backend.js"></script>
@@ -52,17 +53,17 @@
                     <div class="email-field">
                         <input id="email-login" required type="email" class="form-control" placeholder="Email"
                             aria-label="First name">
-                        <img class="mail-icon" src="assets/img/mail-icon.svg" alt="">
+                        <img class="mail-icon bg-white" src="assets/img/mail-icon.svg" alt="">
                     </div>
 
                     <div class="password-field">
                         <input onfocus="checkInputType('password-login', 'login')" id="password-login" required type="password"
                             class="form-control" placeholder="Password" aria-label="First name">
-                        <img id="pw-icon-login" class="password-icon" src="assets/img/password-icon.svg" alt="">
+                        <img id="pw-icon-login" class="password-icon bg-white" src="assets/img/password-icon.svg" alt="">
                         <img onclick="changePwToText('password-login', 'login')" id="pw-no-show-login"
-                            class="password-icon d-none" src="assets/img/pw-no-show-icon.svg" style="cursor: pointer ;">
+                            class="password-icon d-none bg-white" src="assets/img/pw-no-show-icon.svg" style="cursor: pointer ;">
                         <img onclick="changeTextToPw('password-login', 'login')" id="pw-show-login"
-                            class="password-icon d-none" src="assets/img/pw-show-icon.svg" style="cursor: pointer ;">
+                            class="password-icon d-none bg-white" src="assets/img/pw-show-icon.svg" style="cursor: pointer ;">
 
                     </div>
 
@@ -100,24 +101,24 @@
                     <div class="signup-name-field">
                         <input id="name-signup" required type="text" class="form-control" placeholder="Name"
                             aria-label="First name">
-                        <img class="name-signup-icon" src="assets/img/name-icon.svg" alt="">
+                        <img class="name-signup-icon bg-white" src="assets/img/name-icon.svg" alt="">
                     </div>
 
                     <div class="signup-email-field">
                         <input id="email-signup" required type="email" class="form-control" placeholder="Email"
                             aria-label="First name">
-                        <img class="mail-signup-icon" src="assets/img/mail-icon.svg" alt="">
+                        <img class="mail-signup-icon bg-white" src="assets/img/mail-icon.svg" alt="">
 
                     </div>
 
                     <div class="signup-password-field">
                         <input id="password-signup" onfocus="checkInputType('password-signup', 'signup')" required type="password"
                             class="form-control" placeholder="Password" aria-label="First name">
-                        <img id="pw-icon-signup" class="password-signup-icon" src="assets/img/password-icon.svg" alt="">
+                        <img id="pw-icon-signup" class="password-signup-icon bg-white" src="assets/img/password-icon.svg" alt="">
                         <img onclick="changePwToText('password-signup', 'signup')" id="pw-no-show-signup"
-                            class="password-icon d-none" src="assets/img/pw-no-show-icon.svg" style="cursor: pointer ;">
+                            class="password-icon d-none bg-white" src="assets/img/pw-no-show-icon.svg" style="cursor: pointer ;">
                         <img onclick="changeTextToPw('password-signup', 'signup')" id="pw-show-signup"
-                            class="password-icon d-none" src="assets/img/pw-show-icon.svg" style="cursor: pointer ;">
+                            class="password-icon d-none bg-white" src="assets/img/pw-show-icon.svg" style="cursor: pointer ;">
 
 
                     </div>
@@ -163,7 +164,7 @@
                         <input id="forgot-pw-mail" required name="email" type="email" class="form-control"
                             placeholder="E-Mail" aria-label="First name">
 
-                        <img class="forgot-password-icon" src="assets/img/mail-icon.svg" alt="">
+                        <img class="forgot-password-icon bg-white" src="assets/img/mail-icon.svg" alt="">
 
                         <span id="forgot-user-not-found" class="user-not-found d-none">User not found. Try again</span>
 
