--- a/reset_password.html
+++ b/reset_password.html
@@ -46,13 +46,13 @@
                         <input onfocus="checkInputType('new-password','reset')" id="new-password" required type="password"
                             class="form-control" placeholder="New password" aria-label="First name">
 
-                        <img id="pw-icon-reset" class="password-signup-icon" src="assets/img/password-icon.svg" alt="">
+                        <img id="pw-icon-reset" class="password-signup-icon bg-white" src="assets/img/password-icon.svg" alt="">
 
                         <img onclick="changePwToText('new-password', 'reset')" id="pw-no-show-reset"
-                            class="password-icon d-none t-9" src="assets/img/pw-no-show-icon.svg" style="cursor: pointer ;">
+                            class="password-icon d-none t-9 bg-white" src="assets/img/pw-no-show-icon.svg" style="cursor: pointer ;">
 
                         <img onclick="changeTextToPw('new-password', 'reset')" id="pw-show-reset"
-                            class="password-icon d-none t-9" src="assets/img/pw-show-icon.svg" style="cursor: pointer ;">
+                            class="password-icon d-none t-9 bg-white" src="assets/img/pw-show-icon.svg" style="cursor: pointer ;">
 
                     </div>
 
@@ -60,13 +60,13 @@
                         <input onfocus="checkInputType('new-password-confirm', 'confirm')" id="new-password-confirm" required type="password" class="form-control"
                             placeholder="Confirm password" aria-label="First name">
 
-                        <img id="pw-icon-confirm" class="password-signup-icon" src="assets/img/password-icon.svg" alt="">
+                        <img id="pw-icon-confirm" class="password-signup-icon bg-white" src="assets/img/password-icon.svg" alt="">
 
                         <img onclick="changePwToText('new-password-confirm', 'confirm')" id="pw-no-show-confirm"
-                            class="password-icon d-none t-9" src="assets/img/pw-no-show-icon.svg" style="cursor: pointer ;">
+                            class="password-icon d-none t-9 bg-white" src="assets/img/pw-no-show-icon.svg" style="cursor: pointer ;">
 
                         <img onclick="changeTextToPw('new-password-confirm', 'confirm')" id="pw-show-confirm"
-                            class="password-icon d-none t-9" src="assets/img/pw-show-icon.svg" style="cursor: pointer ;">
+                            class="password-icon d-none t-9 bg-white" src="assets/img/pw-show-icon.svg" style="cursor: pointer ;">
 
 
 
