many bugs fixed

--- a/contacts.html
+++ b/contacts.html
@@ -16,7 +16,7 @@
     <link rel="shortcut icon" href="assets/img/Join_background.png" type="image/x-icon">
 
     <script src="mini_backend.js"></script>
-    <script src="contacts.js"></script>
+    <script src="display_contacts.js"></script>
     <script src="script.js"></script>
     <script src="add_task.js"></script>
     <script src="new_contact.js"></script>
