--- a/contacts.html
+++ b/contacts.html
@@ -8,7 +8,7 @@
     <title>Join Contacts</title>
 
     <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    <link href="assets/bootstrap-5.2.3-dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
     <link rel="stylesheet" href="contacts_style.css">
@@ -16,7 +16,7 @@
     <link rel="shortcut icon" href="assets/img/Join_background.png" type="image/x-icon">
 
     <script src="mini_backend.js"></script>
-    <script src="contacts.js"></script>
+    <script src="display_contacts.js"></script>
     <script src="script.js"></script>
     <script src="add_task.js"></script>
     <script src="new_contact.js"></script>
