first commit help page

--- a/legal_notice.html
+++ b/legal_notice.html
@@ -34,6 +34,14 @@
                     Hohentwielstr. 28<br />
                     78250 Tengen</p>
 
+                <p> Niclas Michel<br />
+                    Danckelmannsweg 7<br />
+                    49809 Lingen</p>
+                
+                <p> Simon Vitt<br />
+                    Musterweg 1<br />
+                    12345 Musterstadt</p>
+
                 <h2>Kontakt</h2>
                 <p>E-Mail: dema_ten@yahoo.de</p>
 
