--- a/add_task.html
+++ b/add_task.html
@@ -14,6 +14,7 @@
     <script src="mini_backend.js"></script>
     <script src="script.js"></script>
     <script src="new_contact.js"></script>
+    <script src="add_task_mobile.js"></script>
     <script src="add_task.js"></script>
 
 </head>
