--- a/board.html
+++ b/board.html
@@ -14,6 +14,7 @@
 
     <script src="mini_backend.js"></script>
     <script src="script.js"></script>
+    <script src="board_mobile_and_drag.js"></script>
     <script src="board.js"></script>
     <script src="add_task.js"></script>
     <script src="add_task_template.js"></script>
