--- a/legal_notice.html
+++ b/legal_notice.html
@@ -39,8 +39,8 @@
                     49809 Lingen</p>
                 
                 <p> Simon Vitt<br />
-                    Musterweg 1<br />
-                    12345 Musterstadt</p>
+                    Frankfurter Straße 145<br />
+                    35392 Gießen</p>
 
                 <h2>Kontakt</h2>
                 <p>E-Mail: dema_ten@yahoo.de</p>
