--- a/contacts.html
+++ b/contacts.html
@@ -8,8 +8,7 @@
     <title>Join Contacts</title>
 
     <!-- Bootstrap -->
-    <link href="assets/bootstrap-5.2.3-dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="assets/bootstrap-5.2.3-dist/css/bootstrap.min.css" rel="stylesheet"git>
 
     <link rel="stylesheet" href="contacts_style.css">
     <link rel="stylesheet" href="fonts.css">
