--- a/summary.html
+++ b/summary.html
@@ -83,7 +83,7 @@
                     </div>
                 </div>
                 <div class="greeting">
-                    <span style="margin: 0;">Good morning</span>
+                    <span style="margin: 0;" id="greeting-sentence"></span>
                     <span class="greeting_name" id="greeting-name"></span>
                 </div>
             </div>
