--- a/hello_mobile.html
+++ b/hello_mobile.html
@@ -21,7 +21,7 @@
     <div w3-include-html="assets/templates/mobile_template.html"></div>
     <div w3-include-html="assets/templates/destop_template.html"></div>
     <div class="content-mobile">
-        <div><span id="greeting-time-hello">Good morning</span></div>
+        <div><span id="greeting-time-hello"><span></span></div>
         <h1 class="greeting-name" id="greeting-name-mobile"></h1>
     </div>
 </body>
