login fix from feedback

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         }
     </script>
 
-    
+
 </head>
 
 <body onload="init(); noBack();">
@@ -92,7 +92,7 @@
 
         <div id="sign-up" class="signUp-display  d-none">
             <div class="signUp-area" style="box-shadow: 0px 0px 14px 3px rgba(0, 0, 0, 0.04);">
-                <div class="arrow" onclick="openIndex()"><img src="assets/img/arrow-121-32.png"></div>
+                <div class="arrow" onclick="closeSignUp()"><img src="assets/img/arrow-121-32.png"></div>
 
                 <div class="headline">
                     <h1>Sign up</h1>
@@ -133,7 +133,7 @@
 
                     <div style="display: flex ;">
                         <button class="button mt-4" type="submit">Sign up</button>
-                        <button id="goToLoginBtn" class="button mt-4 d-none" onclick="openIndex()"
+                        <button id="goToLoginBtn" class="button mt-4 d-none" onclick="closeSignUp()"
                             style="margin-left: 12px ; background-color: #28ABE2 ">Go to Login</button>
 
                     </div>
