--- a/contacts.html
+++ b/contacts.html
@@ -8,8 +8,7 @@
     <title>Join Contacts</title>
 
     <!-- Bootstrap -->
-    <link href="assets/bootstrap-5.2.3-dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="assets/bootstrap-5.2.3-dist/css/bootstrap.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="contacts_style.css">
     <link rel="stylesheet" href="fonts.css">
@@ -66,8 +65,8 @@
                             </div>
 
                             <div class="add-contact-buttons">
-                                <div class="button-cancel"><button type="button"
-                                        onclick="flyOutContact()">Cancel X</button>
+                                <div class="button-cancel"><button type="button" onclick="flyOutContact()">Cancel
+                                        X</button>
                                 </div>
                                 <div class="button-create"><button type="submit">Create
                                         contact <img src="assets/img/hook.png"></button>
@@ -197,16 +196,17 @@
                             </div>
                         </div>
 
-                        <div class="new-contact-button" onclick="openNewContact()"><button>New contact<img
-                                    src="assets/img/add_contact_icon.png"></button>
-                        </div>
-
                         <div class="mobile-edit-button" onclick="openEditContact()"><img
                                 src="assets/img/white_pencil.png"></div>
 
                     </div>
 
                 </div>
+
+                <div class="new-contact-button" onclick="openNewContact()"><button>New contact<img
+                            src="assets/img/add_contact_icon.png"></button>
+                </div>
+
             </div>
 
         </div>
