--- a/contacts.html
+++ b/contacts.html
@@ -8,7 +8,7 @@
     <title>Join Contacts</title>
 
     <!-- Bootstrap -->
-    <link href="assets/bootstrap-5.2.3-dist/css/bootstrap.min.css" rel="stylesheet"git>
+    <link href="assets/bootstrap-5.2.3-dist/css/bootstrap.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="contacts_style.css">
     <link rel="stylesheet" href="fonts.css">
