--- a/contacts.html
+++ b/contacts.html
@@ -111,7 +111,7 @@
                             </div>
 
                             <div class="edit-contact-buttons">
-                                <button type="submit" onclick="editContact(activeContact)">Save</button>
+                                <button type="submit">Save</button>
                             </div>
                         </form>
                     </div>
@@ -178,7 +178,7 @@
 
                         <div class="contact-information">
                             <div class="heading-information"> <span>Contact Information</span></div>
-                            <div class="edit-contact" onclick="openEditContact(activeContact)"> <img
+                            <div class="edit-contact" onclick="openEditContact()"> <img
                                     src="assets/img/pencil.png"><span>Edit Contact</span></div>
                         </div>
 
