--- a/add_task.html
+++ b/add_task.html
@@ -66,15 +66,15 @@
                         <input required type="date" id="input-date">
                         <span>Prio</span>
                         <div class="choosePriority">
-                            <div id="urgent-btn" onclick="clickPriorityButton('urgent-btn')">
+                            <div id="urgent-btn" onclick="clickPriorityButton('urgent')">
                                 <span>Urgent</span>
                                 <img src="assets/img/addTaskUrgentSymbol.svg">
                             </div>
-                            <div id="medium-btn" onclick="clickPriorityButton('medium-btn')">
+                            <div id="medium-btn" onclick="clickPriorityButton('medium')">
                                 <span>Medium</span>
                                 <img src="assets/img/addTaskMediumSymbol.svg">
                             </div>
-                            <div id="low-btn" onclick="clickPriorityButton('low-btn')">
+                            <div id="low-btn" onclick="clickPriorityButton('low')">
                                 <span>Low</span>
                                 <img src="assets/img/addTaskLowSymbol.svg">
                             </div>
@@ -139,15 +139,15 @@
             </div>
             <span>Prio</span>
             <div class="choosePriority">
-                <div id="urgent-btn-mobile" onclick="clickPriorityButton('urgent-btn-mobile')">
+                <div id="urgent-btn-mobile" onclick="clickPriorityButton('urgent')">
                     <span>Urgent</span>
                     <img src="assets/img/addTaskUrgentSymbol.svg">
                 </div>
-                <div id="medium-btn-mobile" onclick="clickPriorityButton('medium-btn-mobile')">
+                <div id="medium-btn-mobile" onclick="clickPriorityButton('medium')">
                     <span>Medium</span>
                     <img src="assets/img/addTaskMediumSymbol.svg">
                 </div>
-                <div id="low-btn-mobile" onclick="clickPriorityButton('low-btn-mobile')">
+                <div id="low-btn-mobile" onclick="clickPriorityButton('low')">
                     <span>Low</span>
                     <img src="assets/img/addTaskLowSymbol.svg">
                 </div>
