--- a/success_reset_pw.html
+++ b/success_reset_pw.html
@@ -20,6 +20,7 @@
 
     <script src="script.js"></script>
     <script src="success.js"></script>
+    <script src="login.js"></script>
 
 
 </head>
