--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <title>Join Login</title>
 
     <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="assets/bootstrap-5.2.3-dist/css/bootstrap.min.css" rel="stylesheet">
 
     <link rel="shortcut icon" href="assets/img/Join_background.png" type="image/x-icon">
 
@@ -149,7 +148,7 @@
 
                 <div class="forgot-password-email-field">
                     <form onsubmit="checkIfUserExists(event)" class="forgot-pw-form"
-                        action="https://gruppe-400.developerakademie.net/send_mail.php" method="POST">
+                        action="https://dennis-maier.developerakademie.net/Modul_10_-_Join/send_mail.php" method="POST">
 
                         <input id="forgot-pw-mail" required name="email" type="email" class="form-control"
                             placeholder="E-Mail" aria-label="First name">
