--- a/success_forget_pw.html
+++ b/success_forget_pw.html
@@ -8,8 +8,7 @@
     <title>E-Mail was sent</title>
 
     <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="assets/bootstrap-5.2.3-dist/css/bootstrap.min.css" rel="stylesheet">
 
     <link rel="shortcut icon" href="assets/img/Join_background.png" type="image/x-icon">
 
